--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,7 @@
+application.args=jiabeihua iwbi1972 192.168.1.3/beihua/develop/ local
 compile.on.save=true
+do.depend=false
+do.jar=true
+javac.debug=true
+javadoc.preview=true
 user.properties.file=C:\\Users\\beihua.jia\\AppData\\Roaming\\NetBeans\\7.3\\build.properties
